unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/Internal_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Internal_Product_Description__c</fullName>
    <label>Internal Product Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>