unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/Number_of_Plays__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Plays__c</fullName>
    <label># of Plays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>