unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/Platform_Availability__c.field-meta.xml
<CustomField>
    <fullName>Platform_Availability__c</fullName>
    <label>Platform Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platforms</valueSetName>
    </valueSet>
</CustomField>