unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/Product_Family_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Text__c</fullName>
    <formula>&quot;Irrelevant Text&quot;</formula>
    <label>Product Family (Text)</label>
    <type>Text</type>
</CustomField>