unpackaged/main/default/objects/SBQQ__ProductOption__c/fields/Rate_Card_Description__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Description__c</fullName>
    <label>Rate Card Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>